--- a/build.gradle
+++ b/build.gradle
@@ -37,8 +37,18 @@ repositories {
        dirs 'libs'
    }
 }
+ext {
+    springVersion = '4.2.3.RELEASE'
+    logbackVersion ='1.1.3'
+    slf4jVersion = '1.7.12'
+}
+
+
 
 dependencies {
+    compile ("org.springframework:spring-core:${springVersion}")
+    compile ("org.springframework:spring-beans:${springVersion}")
+    compile ("org.springframework:spring-context:${springVersion}")
     compile 'org.apache.camel:camel-core:2.16.1'
     compile "org.apache.camel:camel-jms:2.16.1"
     compile("org.apache.activemq:activemq-client")
@@ -49,7 +59,13 @@ dependencies {
     testCompile 'org.assertj:assertj-core:3.1.0'
     testCompile 'com.jayway.awaitility:awaitility-java8:1.6.1'
     testCompile 'com.jayway.awaitility:awaitility:1.6.1'   
+    testCompile 'org.springframework:spring-test:4.2.2.RELEASE'
     runtime 'com.h2database:h2'
+    
+    
+    compile("org.slf4j:slf4j-api:$slf4jVersion")
+    runtime("ch.qos.logback:logback-classic:$logbackVersion")
+    compile("ch.qos.logback:logback-core:$logbackVersion")
     
 }
 
