--- a/src/test/resources/test.properties
+++ b/src/test/resources/test.properties
@@ -1,5 +1,5 @@
 end.test=mock:out
 join=join
 
-join.longRunning=longRunning?concurrentConsumers=2
+join.longRunning=longRunning
 end.long.running.test=mock:out
